# mental-health-agentic-ai

./: .gitignore  DockerFile  README.md  frontend.py  main.py  pyproject.toml  requirements.txt
backend/: ai_agents.py  config.py  main.py  server.py  tools.py
